Fix alignment of date in post list small screen

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -200,6 +200,7 @@ h1 {
 
             @include media-query($on-palm) {
                 flex-direction: column;
+                align-items: baseline;
             }
 
             .post-info-title {
